<resources>
    <string name="app_name" translatable="false">News</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="newsOneHead" translatable="false">Twin tropical storms threaten flooding, mudslides in Taiwan and Vietnam</string>
    <string name="newsOneDesc" translatable="false">Vietnam and Taiwan are bracing for twin tropical storms which are expected to make landfall over the coming days, with typhoon Chanthu strengthening into a Super Typhoon in the past 24 hours.</string>
    <string name="newsOneCategory" translatable="false">World</string>
    <string name="newOneTime" translatable="false">8 min ago</string>
    <string name="newsTwoHead" translatable="false">US cities are losing 36 million trees a year. Here is why it matters</string>
    <string name="newsTwoDesc" translatable="false">If you are looking for a reason to care about tree loss, this summers record-breaking heat waves might be it. Trees can lower summer daytime temperatures by as much as 10 degrees Fahrenheit, according to a recent study.</string>
    <string name="newsTwoCategory" translatable="false">Climate in crisis</string>
    <string name="newsTwoTime" translatable="false">13 min ago</string>
    <string name="newsThreeCategory">Travel</string>
    <string name="newsThreeTime">19 min ago</string>
    <string name="newsThreeHead">Photographic proof that wild animals are hilarious</string>
    <string name="newsThreeDesc">The selection of 42 images make up the final shortlist for the competition, which received more than 7,000 entries from around the world, according to a press release on Wednesday.</string>
    <string name="newsFourCategory">Trader</string>
    <string name="newsFourTime">25 min ago</string>
    <string name="newsFourHead">There\'s a shortage of truckers, but TuSimple thinks it has a solution: no driver needed</string>
    <string name="newsFourDesc">Right now, there\'s a shortage of truck drivers in the US and worldwide, exacerbated by the e-commerce boom brought on by the pandemic.</string>
    <string name="fish">Fish</string>
    <string name="newsFiveCategory">Other</string>
    <string name="newsFiveTime">33 min ago</string>
    <string name="newsFiveHead">A newly discovered dinosaur with shark-like teeth was the T. rex of its day</string>
    <string name="newsFiveDesc">It belongs to family of dinosaurs known as carcharodontosaurs, best known for their shark-like teeth. Named Ulughbegsaurus uzbekistanensis, it was at least 22 feet (seven meters) long and weighed more than a ton (1,000 kilograms) and would have roamed Central Asia about 90 million years ago.</string>
    <string name="newsSixCategory">Business</string>
    <string name="newsSixTime">44 min ago</string>
    <string name="newsSixHead">The pandemic changed the way we work. 15 CEOs weigh in on what\'s next</string>
    <string name="newsSixDesc">The shutdowns caused by the Covid-19 pandemic forced Corporate America to embark upon a massive work-from-home experiment that presented many unknowns: How do we keep workers safe? Can we stay productive? What’s the best way to communicate and collaborate? How long will we be out of the office?</string>
    <string name="cat">Cat</string>
    <string name="key">Key</string>
    <string name="newsOne">Bruce Is a Parrot With a Broken Beak. So He Invented a Tool.</string>
    <string name="newsTwo">A Swirling Vortex Is No Match for This Deep-Sea Sponge</string>
    <string name="newsThree">Milkweed Butterflies Are More Murderous Than They Look</string>
    <string name="newsFour">‘Spaceship-Shaped’ Fossil Reveals Hungry Predator of Ancient Oceans</string>
    <string name="newsFive">Did Nazis Produce These Uranium Cubes? Researchers Look for an Answer.</string>
    <string name="newsSix">Komodo Dragons Are Now Endangered and ‘Moving Toward Extinction’</string>
    <string name="newsSeven">How the Cat Gets Its Stripes: It’s Genetics, Not a Folk Tale</string>
    <string name="newsEight">Black Vulture Attacks on Animals May Be Increasing</string>
    <string name="newsNine">Reuniting an Orphan Elephant and Her Mom, Perhaps, With DNA and Luck</string>
    <string name="news">News</string>
</resources>