<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@android:color/white"
    tools:context=".ThirdFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imgOne"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/fish"
            app:srcCompat="@drawable/news5" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/teal_200"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newsFiveCategory" />

            <TextView
                android:textColor="@color/teal_200"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/newsFiveTime"
                android:gravity="end"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/newsOneHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newsFiveHead"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/newsOneDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newsFiveDesc"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <ImageView
            android:id="@+id/imgTwo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/key"
            app:srcCompat="@drawable/news6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/teal_200"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newsSixCategory" />

            <TextView
                android:textColor="@color/teal_200"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/newsSixTime"
                android:gravity="end"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/newsTwoHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newsSixHead"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/newsTwoDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newsSixDesc"
            android:textSize="14sp" />
    </LinearLayout>

</FrameLayout>