<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/white"
    tools:context=".SecondFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgOne"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="Cat"
            app:srcCompat="@drawable/news1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/teal_200"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newsOneCategory" />

            <TextView
                android:textColor="@color/teal_200"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/newOneTime"
                android:gravity="end"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/newsOneHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newsOneHead"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/newsOneDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newsOneDesc"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <ImageView
            android:id="@+id/imgTwo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="Key"
            app:srcCompat="@drawable/news2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/teal_200"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newsTwoCategory" />

            <TextView
                android:textColor="@color/teal_200"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/newsTwoTime"
                android:gravity="end"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/newsTwoHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newsTwoHead"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/newsTwoDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newsTwoDesc"
            android:textSize="14sp" />
    </LinearLayout>
</FrameLayout>